Fix logo on mobile screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -36,14 +36,22 @@
 
 /* Larger container on xxl screens */
 @media (min-width: 1400px) {
+  
   .container {
     max-width: 1340px;
   }
 }
 
-/* Reposition hero image for mobile screens */
+/* Media Queries for screens smaller than 992px */
 @media (max-width: 992px) {
+
+  /* Reposition hero image */
   #hero-image-container {
     background-position: 40%;
+  }
+
+  /* Resize logo */
+  .nav-logo img {
+    height: 50px;
   }
 }
